<resources>
    <string name="app_name">Manager Stack</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="Paagain">Again</string>
    <string name="email">Email</string>
    <string name="fullname">FullName</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pass">Pass</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">UserName</string>
    <string name="confir_mail">We use your email and mobile number to sent you ride confirmations and receipts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_list_product">ListProductActivity</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="tab_title">Test</string>
</resources>
